// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateEvaluatorClass snapshots snapshot: single boolean flag 1`] = `
"
(function(validateFlagValue, getTimestampNanos, ENTRY_TYPE_FF_ACCESS, ENTRY_TYPE_FF_USAGE) {
  'use strict';

  class GeneratedEvaluator {
    #state;

    constructor(state) {
      this.#state = state;
    }

    // Expose internal state as getters for introspection
    get schema() { return this.#state.schema; }
    get evaluationContext() { return this.#state.evaluationContext; }
    get evaluator() { return this.#state.evaluator; }
    get buffer() { return this.#state.buffer; }
    get columnWriters() { return this.#state.columnWriters; }
    set columnWriters(value) { this.#state.columnWriters = value; }
    set buffer(value) { this.#state.buffer = value; }

    /**
     * Get a flag value synchronously with caching and logging
     * Returns undefined for falsy values, FlagContext wrapper for truthy values
     */
    #getFlag(flagName) {
      const state = this.#state;

      // Check cache first (deduplication - subsequent access in same span)
      if (state.flagCache.has(flagName)) {
        return state.flagCache.get(flagName);
      }

      const definition = state.schema[flagName];

      // Evaluate flag
      const rawValue = state.evaluator.getSync(flagName, state.evaluationContext);
      const value = validateFlagValue(rawValue, definition.schema, definition.defaultValue);

      // Log access (only on first access in this span)
      if (!state.accessedFlags.has(flagName)) {
        this.#logAccess(flagName, rawValue);
        state.accessedFlags.add(flagName);
      }

      // Return undefined for falsy values (false, 0, "", null, undefined)
      if (!value) {
        state.flagCache.set(flagName, undefined);
        return undefined;
      }

      // Wrap truthy values with track() method
      const wrapped = this.#wrapValue(flagName, value);
      state.flagCache.set(flagName, wrapped);
      return wrapped;
    }

    /**
     * Wrap a truthy flag value with a track() method
     */
    #wrapValue(flagName, value) {
      const self = this;

      if (typeof value === 'boolean') {
        return {
          value: true,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      if (typeof value === 'string') {
        return {
          value,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      if (typeof value === 'object' && value !== null) {
        return {
          ...value,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      return {
        value,
        track(context) {
          self.#logUsage(flagName, context);
        }
      };
    }

    /**
     * Log flag access to buffer or column writers
     */
    #logAccess(flagName, value) {
      const state = this.#state;

      // Support for FlagColumnWriters interface
      if (state.columnWriters) {
        state.columnWriters.writeEntryType('ff-access');
        state.columnWriters.writeFfName(flagName);
        state.columnWriters.writeFfValue(value);
        state.columnWriters.writeContextAttributes(state.evaluationContext);
        return;
      }

      // New SpanBuffer API
      if (!state.buffer) return;

      const idx = state.buffer.writeIndex;

      state.buffer.operations[idx] = ENTRY_TYPE_FF_ACCESS;
      state.buffer.timestamps[idx] = getTimestampNanos();

      // Write flag name (category column - stored as raw string)
      const ffNameColumn = state.buffer['attr_ffName_values'];
      if (ffNameColumn && Array.isArray(ffNameColumn)) {
        ffNameColumn[idx] = flagName;
      }

      // Write flag value (category column - stored as raw string)
      const ffValueColumn = state.buffer['attr_ffValue_values'];
      if (ffValueColumn && Array.isArray(ffValueColumn)) {
        const strValue = value === null || value === undefined ? 'null' : String(value);
        ffValueColumn[idx] = strValue;
      }

      state.buffer.writeIndex++;
    }

    /**
     * Log flag usage to buffer or column writers
     */
    #logUsage(flagName, context) {
      const state = this.#state;

      // Support for FlagColumnWriters interface
      if (state.columnWriters) {
        state.columnWriters.writeEntryType('ff-usage');
        state.columnWriters.writeFfName(flagName);
        state.columnWriters.writeAction(context?.action);
        state.columnWriters.writeOutcome(context?.outcome);
        state.columnWriters.writeContextAttributes(state.evaluationContext);
        return;
      }

      if (!state.buffer) return;

      const idx = state.buffer.writeIndex;

      state.buffer.operations[idx] = ENTRY_TYPE_FF_USAGE;
      state.buffer.timestamps[idx] = getTimestampNanos();

      // Write flag name (category column - stored as raw string)
      const ffNameColumn = state.buffer['attr_ffName_values'];
      if (ffNameColumn && Array.isArray(ffNameColumn)) {
        ffNameColumn[idx] = flagName;
      }

      if (context?.action) {
        const actionColumn = state.buffer['attr_action_values'];
        if (actionColumn && Array.isArray(actionColumn)) {
          actionColumn[idx] = context.action;
          const nullBitmap = state.buffer.attr_action_nulls;
          if (nullBitmap) {
            const byteIndex = Math.floor(idx / 8);
            const bitOffset = idx % 8;
            nullBitmap[byteIndex] |= 1 << bitOffset;
          }
        }
      }

      if (context?.outcome) {
        const outcomeColumn = state.buffer['attr_outcome_values'];
        if (outcomeColumn && Array.isArray(outcomeColumn)) {
          outcomeColumn[idx] = context.outcome;
          const nullBitmap = state.buffer.attr_outcome_nulls;
          if (nullBitmap) {
            const byteIndex = Math.floor(idx / 8);
            const bitOffset = idx % 8;
            nullBitmap[byteIndex] |= 1 << bitOffset;
          }
        }
      }

      state.buffer.writeIndex++;
    }

    /**
     * Get async flag value
     * Returns undefined when false, FlagContext when truthy
     */
    async get(flag) {
      const state = this.#state;
      const cacheKey = 'async_' + flag;

      if (state.flagCache.has(cacheKey)) {
        return state.flagCache.get(cacheKey);
      }

      const definition = state.schema[flag];
      const rawValue = await state.evaluator.getAsync(flag, state.evaluationContext);
      const value = validateFlagValue(rawValue, definition.schema, definition.defaultValue);

      if (!state.accessedFlags.has(flag)) {
        this.#logAccess(flag, rawValue);
        state.accessedFlags.add(flag);
      }

      if (!value) {
        state.flagCache.set(cacheKey, undefined);
        return undefined;
      }

      const wrapped = this.#wrapValue(flag, value);
      state.flagCache.set(cacheKey, wrapped);
      return wrapped;
    }

    /**
     * Track flag usage. Prefer using flag.track() for the fluent API.
     */
    trackUsage(flag, context) {
      this.#logUsage(flag, context);
    }

    /**
     * Create child evaluator with additional context
     */
    forContext(additional) {
      const state = this.#state;
      return new GeneratedEvaluator({
        ...state,
        evaluationContext: { ...state.evaluationContext, ...additional },
        accessedFlags: new Set(),
        flagCache: new Map(),
      });
    }

    /**
     * Create evaluator bound to a different buffer
     */
    withBuffer(buffer) {
      const state = this.#state;
      return new GeneratedEvaluator({
        ...state,
        buffer,
        accessedFlags: new Set(),
        flagCache: new Map(),
      });
    }

    /**
     * Get current evaluation context
     */
    getContext() {
      return this.#state.evaluationContext;
    }

    // Generated getters for each flag
    
    get debugMode() {
      return this.#getFlag('debugMode');
    }
  }

  return GeneratedEvaluator;
})
"
`;

exports[`generateEvaluatorClass snapshots snapshot: multiple flags of different types 1`] = `
"
(function(validateFlagValue, getTimestampNanos, ENTRY_TYPE_FF_ACCESS, ENTRY_TYPE_FF_USAGE) {
  'use strict';

  class GeneratedEvaluator {
    #state;

    constructor(state) {
      this.#state = state;
    }

    // Expose internal state as getters for introspection
    get schema() { return this.#state.schema; }
    get evaluationContext() { return this.#state.evaluationContext; }
    get evaluator() { return this.#state.evaluator; }
    get buffer() { return this.#state.buffer; }
    get columnWriters() { return this.#state.columnWriters; }
    set columnWriters(value) { this.#state.columnWriters = value; }
    set buffer(value) { this.#state.buffer = value; }

    /**
     * Get a flag value synchronously with caching and logging
     * Returns undefined for falsy values, FlagContext wrapper for truthy values
     */
    #getFlag(flagName) {
      const state = this.#state;

      // Check cache first (deduplication - subsequent access in same span)
      if (state.flagCache.has(flagName)) {
        return state.flagCache.get(flagName);
      }

      const definition = state.schema[flagName];

      // Evaluate flag
      const rawValue = state.evaluator.getSync(flagName, state.evaluationContext);
      const value = validateFlagValue(rawValue, definition.schema, definition.defaultValue);

      // Log access (only on first access in this span)
      if (!state.accessedFlags.has(flagName)) {
        this.#logAccess(flagName, rawValue);
        state.accessedFlags.add(flagName);
      }

      // Return undefined for falsy values (false, 0, "", null, undefined)
      if (!value) {
        state.flagCache.set(flagName, undefined);
        return undefined;
      }

      // Wrap truthy values with track() method
      const wrapped = this.#wrapValue(flagName, value);
      state.flagCache.set(flagName, wrapped);
      return wrapped;
    }

    /**
     * Wrap a truthy flag value with a track() method
     */
    #wrapValue(flagName, value) {
      const self = this;

      if (typeof value === 'boolean') {
        return {
          value: true,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      if (typeof value === 'string') {
        return {
          value,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      if (typeof value === 'object' && value !== null) {
        return {
          ...value,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      return {
        value,
        track(context) {
          self.#logUsage(flagName, context);
        }
      };
    }

    /**
     * Log flag access to buffer or column writers
     */
    #logAccess(flagName, value) {
      const state = this.#state;

      // Support for FlagColumnWriters interface
      if (state.columnWriters) {
        state.columnWriters.writeEntryType('ff-access');
        state.columnWriters.writeFfName(flagName);
        state.columnWriters.writeFfValue(value);
        state.columnWriters.writeContextAttributes(state.evaluationContext);
        return;
      }

      // New SpanBuffer API
      if (!state.buffer) return;

      const idx = state.buffer.writeIndex;

      state.buffer.operations[idx] = ENTRY_TYPE_FF_ACCESS;
      state.buffer.timestamps[idx] = getTimestampNanos();

      // Write flag name (category column - stored as raw string)
      const ffNameColumn = state.buffer['attr_ffName_values'];
      if (ffNameColumn && Array.isArray(ffNameColumn)) {
        ffNameColumn[idx] = flagName;
      }

      // Write flag value (category column - stored as raw string)
      const ffValueColumn = state.buffer['attr_ffValue_values'];
      if (ffValueColumn && Array.isArray(ffValueColumn)) {
        const strValue = value === null || value === undefined ? 'null' : String(value);
        ffValueColumn[idx] = strValue;
      }

      state.buffer.writeIndex++;
    }

    /**
     * Log flag usage to buffer or column writers
     */
    #logUsage(flagName, context) {
      const state = this.#state;

      // Support for FlagColumnWriters interface
      if (state.columnWriters) {
        state.columnWriters.writeEntryType('ff-usage');
        state.columnWriters.writeFfName(flagName);
        state.columnWriters.writeAction(context?.action);
        state.columnWriters.writeOutcome(context?.outcome);
        state.columnWriters.writeContextAttributes(state.evaluationContext);
        return;
      }

      if (!state.buffer) return;

      const idx = state.buffer.writeIndex;

      state.buffer.operations[idx] = ENTRY_TYPE_FF_USAGE;
      state.buffer.timestamps[idx] = getTimestampNanos();

      // Write flag name (category column - stored as raw string)
      const ffNameColumn = state.buffer['attr_ffName_values'];
      if (ffNameColumn && Array.isArray(ffNameColumn)) {
        ffNameColumn[idx] = flagName;
      }

      if (context?.action) {
        const actionColumn = state.buffer['attr_action_values'];
        if (actionColumn && Array.isArray(actionColumn)) {
          actionColumn[idx] = context.action;
          const nullBitmap = state.buffer.attr_action_nulls;
          if (nullBitmap) {
            const byteIndex = Math.floor(idx / 8);
            const bitOffset = idx % 8;
            nullBitmap[byteIndex] |= 1 << bitOffset;
          }
        }
      }

      if (context?.outcome) {
        const outcomeColumn = state.buffer['attr_outcome_values'];
        if (outcomeColumn && Array.isArray(outcomeColumn)) {
          outcomeColumn[idx] = context.outcome;
          const nullBitmap = state.buffer.attr_outcome_nulls;
          if (nullBitmap) {
            const byteIndex = Math.floor(idx / 8);
            const bitOffset = idx % 8;
            nullBitmap[byteIndex] |= 1 << bitOffset;
          }
        }
      }

      state.buffer.writeIndex++;
    }

    /**
     * Get async flag value
     * Returns undefined when false, FlagContext when truthy
     */
    async get(flag) {
      const state = this.#state;
      const cacheKey = 'async_' + flag;

      if (state.flagCache.has(cacheKey)) {
        return state.flagCache.get(cacheKey);
      }

      const definition = state.schema[flag];
      const rawValue = await state.evaluator.getAsync(flag, state.evaluationContext);
      const value = validateFlagValue(rawValue, definition.schema, definition.defaultValue);

      if (!state.accessedFlags.has(flag)) {
        this.#logAccess(flag, rawValue);
        state.accessedFlags.add(flag);
      }

      if (!value) {
        state.flagCache.set(cacheKey, undefined);
        return undefined;
      }

      const wrapped = this.#wrapValue(flag, value);
      state.flagCache.set(cacheKey, wrapped);
      return wrapped;
    }

    /**
     * Track flag usage. Prefer using flag.track() for the fluent API.
     */
    trackUsage(flag, context) {
      this.#logUsage(flag, context);
    }

    /**
     * Create child evaluator with additional context
     */
    forContext(additional) {
      const state = this.#state;
      return new GeneratedEvaluator({
        ...state,
        evaluationContext: { ...state.evaluationContext, ...additional },
        accessedFlags: new Set(),
        flagCache: new Map(),
      });
    }

    /**
     * Create evaluator bound to a different buffer
     */
    withBuffer(buffer) {
      const state = this.#state;
      return new GeneratedEvaluator({
        ...state,
        buffer,
        accessedFlags: new Set(),
        flagCache: new Map(),
      });
    }

    /**
     * Get current evaluation context
     */
    getContext() {
      return this.#state.evaluationContext;
    }

    // Generated getters for each flag
    
    get debugMode() {
      return this.#getFlag('debugMode');
    }

    get maxRetries() {
      return this.#getFlag('maxRetries');
    }

    get logLevel() {
      return this.#getFlag('logLevel');
    }
  }

  return GeneratedEvaluator;
})
"
`;

exports[`generateEvaluatorClass snapshots snapshot: async flags 1`] = `
"
(function(validateFlagValue, getTimestampNanos, ENTRY_TYPE_FF_ACCESS, ENTRY_TYPE_FF_USAGE) {
  'use strict';

  class GeneratedEvaluator {
    #state;

    constructor(state) {
      this.#state = state;
    }

    // Expose internal state as getters for introspection
    get schema() { return this.#state.schema; }
    get evaluationContext() { return this.#state.evaluationContext; }
    get evaluator() { return this.#state.evaluator; }
    get buffer() { return this.#state.buffer; }
    get columnWriters() { return this.#state.columnWriters; }
    set columnWriters(value) { this.#state.columnWriters = value; }
    set buffer(value) { this.#state.buffer = value; }

    /**
     * Get a flag value synchronously with caching and logging
     * Returns undefined for falsy values, FlagContext wrapper for truthy values
     */
    #getFlag(flagName) {
      const state = this.#state;

      // Check cache first (deduplication - subsequent access in same span)
      if (state.flagCache.has(flagName)) {
        return state.flagCache.get(flagName);
      }

      const definition = state.schema[flagName];

      // Evaluate flag
      const rawValue = state.evaluator.getSync(flagName, state.evaluationContext);
      const value = validateFlagValue(rawValue, definition.schema, definition.defaultValue);

      // Log access (only on first access in this span)
      if (!state.accessedFlags.has(flagName)) {
        this.#logAccess(flagName, rawValue);
        state.accessedFlags.add(flagName);
      }

      // Return undefined for falsy values (false, 0, "", null, undefined)
      if (!value) {
        state.flagCache.set(flagName, undefined);
        return undefined;
      }

      // Wrap truthy values with track() method
      const wrapped = this.#wrapValue(flagName, value);
      state.flagCache.set(flagName, wrapped);
      return wrapped;
    }

    /**
     * Wrap a truthy flag value with a track() method
     */
    #wrapValue(flagName, value) {
      const self = this;

      if (typeof value === 'boolean') {
        return {
          value: true,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      if (typeof value === 'string') {
        return {
          value,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      if (typeof value === 'object' && value !== null) {
        return {
          ...value,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      return {
        value,
        track(context) {
          self.#logUsage(flagName, context);
        }
      };
    }

    /**
     * Log flag access to buffer or column writers
     */
    #logAccess(flagName, value) {
      const state = this.#state;

      // Support for FlagColumnWriters interface
      if (state.columnWriters) {
        state.columnWriters.writeEntryType('ff-access');
        state.columnWriters.writeFfName(flagName);
        state.columnWriters.writeFfValue(value);
        state.columnWriters.writeContextAttributes(state.evaluationContext);
        return;
      }

      // New SpanBuffer API
      if (!state.buffer) return;

      const idx = state.buffer.writeIndex;

      state.buffer.operations[idx] = ENTRY_TYPE_FF_ACCESS;
      state.buffer.timestamps[idx] = getTimestampNanos();

      // Write flag name (category column - stored as raw string)
      const ffNameColumn = state.buffer['attr_ffName_values'];
      if (ffNameColumn && Array.isArray(ffNameColumn)) {
        ffNameColumn[idx] = flagName;
      }

      // Write flag value (category column - stored as raw string)
      const ffValueColumn = state.buffer['attr_ffValue_values'];
      if (ffValueColumn && Array.isArray(ffValueColumn)) {
        const strValue = value === null || value === undefined ? 'null' : String(value);
        ffValueColumn[idx] = strValue;
      }

      state.buffer.writeIndex++;
    }

    /**
     * Log flag usage to buffer or column writers
     */
    #logUsage(flagName, context) {
      const state = this.#state;

      // Support for FlagColumnWriters interface
      if (state.columnWriters) {
        state.columnWriters.writeEntryType('ff-usage');
        state.columnWriters.writeFfName(flagName);
        state.columnWriters.writeAction(context?.action);
        state.columnWriters.writeOutcome(context?.outcome);
        state.columnWriters.writeContextAttributes(state.evaluationContext);
        return;
      }

      if (!state.buffer) return;

      const idx = state.buffer.writeIndex;

      state.buffer.operations[idx] = ENTRY_TYPE_FF_USAGE;
      state.buffer.timestamps[idx] = getTimestampNanos();

      // Write flag name (category column - stored as raw string)
      const ffNameColumn = state.buffer['attr_ffName_values'];
      if (ffNameColumn && Array.isArray(ffNameColumn)) {
        ffNameColumn[idx] = flagName;
      }

      if (context?.action) {
        const actionColumn = state.buffer['attr_action_values'];
        if (actionColumn && Array.isArray(actionColumn)) {
          actionColumn[idx] = context.action;
          const nullBitmap = state.buffer.attr_action_nulls;
          if (nullBitmap) {
            const byteIndex = Math.floor(idx / 8);
            const bitOffset = idx % 8;
            nullBitmap[byteIndex] |= 1 << bitOffset;
          }
        }
      }

      if (context?.outcome) {
        const outcomeColumn = state.buffer['attr_outcome_values'];
        if (outcomeColumn && Array.isArray(outcomeColumn)) {
          outcomeColumn[idx] = context.outcome;
          const nullBitmap = state.buffer.attr_outcome_nulls;
          if (nullBitmap) {
            const byteIndex = Math.floor(idx / 8);
            const bitOffset = idx % 8;
            nullBitmap[byteIndex] |= 1 << bitOffset;
          }
        }
      }

      state.buffer.writeIndex++;
    }

    /**
     * Get async flag value
     * Returns undefined when false, FlagContext when truthy
     */
    async get(flag) {
      const state = this.#state;
      const cacheKey = 'async_' + flag;

      if (state.flagCache.has(cacheKey)) {
        return state.flagCache.get(cacheKey);
      }

      const definition = state.schema[flag];
      const rawValue = await state.evaluator.getAsync(flag, state.evaluationContext);
      const value = validateFlagValue(rawValue, definition.schema, definition.defaultValue);

      if (!state.accessedFlags.has(flag)) {
        this.#logAccess(flag, rawValue);
        state.accessedFlags.add(flag);
      }

      if (!value) {
        state.flagCache.set(cacheKey, undefined);
        return undefined;
      }

      const wrapped = this.#wrapValue(flag, value);
      state.flagCache.set(cacheKey, wrapped);
      return wrapped;
    }

    /**
     * Track flag usage. Prefer using flag.track() for the fluent API.
     */
    trackUsage(flag, context) {
      this.#logUsage(flag, context);
    }

    /**
     * Create child evaluator with additional context
     */
    forContext(additional) {
      const state = this.#state;
      return new GeneratedEvaluator({
        ...state,
        evaluationContext: { ...state.evaluationContext, ...additional },
        accessedFlags: new Set(),
        flagCache: new Map(),
      });
    }

    /**
     * Create evaluator bound to a different buffer
     */
    withBuffer(buffer) {
      const state = this.#state;
      return new GeneratedEvaluator({
        ...state,
        buffer,
        accessedFlags: new Set(),
        flagCache: new Map(),
      });
    }

    /**
     * Get current evaluation context
     */
    getContext() {
      return this.#state.evaluationContext;
    }

    // Generated getters for each flag
    
    get asyncFeature() {
      return this.#getFlag('asyncFeature');
    }

    get asyncLimit() {
      return this.#getFlag('asyncLimit');
    }
  }

  return GeneratedEvaluator;
})
"
`;

exports[`generateEvaluatorClass snapshots snapshot: custom class name 1`] = `
"
(function(validateFlagValue, getTimestampNanos, ENTRY_TYPE_FF_ACCESS, ENTRY_TYPE_FF_USAGE) {
  'use strict';

  class CustomFeatureFlagEvaluator {
    #state;

    constructor(state) {
      this.#state = state;
    }

    // Expose internal state as getters for introspection
    get schema() { return this.#state.schema; }
    get evaluationContext() { return this.#state.evaluationContext; }
    get evaluator() { return this.#state.evaluator; }
    get buffer() { return this.#state.buffer; }
    get columnWriters() { return this.#state.columnWriters; }
    set columnWriters(value) { this.#state.columnWriters = value; }
    set buffer(value) { this.#state.buffer = value; }

    /**
     * Get a flag value synchronously with caching and logging
     * Returns undefined for falsy values, FlagContext wrapper for truthy values
     */
    #getFlag(flagName) {
      const state = this.#state;

      // Check cache first (deduplication - subsequent access in same span)
      if (state.flagCache.has(flagName)) {
        return state.flagCache.get(flagName);
      }

      const definition = state.schema[flagName];

      // Evaluate flag
      const rawValue = state.evaluator.getSync(flagName, state.evaluationContext);
      const value = validateFlagValue(rawValue, definition.schema, definition.defaultValue);

      // Log access (only on first access in this span)
      if (!state.accessedFlags.has(flagName)) {
        this.#logAccess(flagName, rawValue);
        state.accessedFlags.add(flagName);
      }

      // Return undefined for falsy values (false, 0, "", null, undefined)
      if (!value) {
        state.flagCache.set(flagName, undefined);
        return undefined;
      }

      // Wrap truthy values with track() method
      const wrapped = this.#wrapValue(flagName, value);
      state.flagCache.set(flagName, wrapped);
      return wrapped;
    }

    /**
     * Wrap a truthy flag value with a track() method
     */
    #wrapValue(flagName, value) {
      const self = this;

      if (typeof value === 'boolean') {
        return {
          value: true,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      if (typeof value === 'string') {
        return {
          value,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      if (typeof value === 'object' && value !== null) {
        return {
          ...value,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      return {
        value,
        track(context) {
          self.#logUsage(flagName, context);
        }
      };
    }

    /**
     * Log flag access to buffer or column writers
     */
    #logAccess(flagName, value) {
      const state = this.#state;

      // Support for FlagColumnWriters interface
      if (state.columnWriters) {
        state.columnWriters.writeEntryType('ff-access');
        state.columnWriters.writeFfName(flagName);
        state.columnWriters.writeFfValue(value);
        state.columnWriters.writeContextAttributes(state.evaluationContext);
        return;
      }

      // New SpanBuffer API
      if (!state.buffer) return;

      const idx = state.buffer.writeIndex;

      state.buffer.operations[idx] = ENTRY_TYPE_FF_ACCESS;
      state.buffer.timestamps[idx] = getTimestampNanos();

      // Write flag name (category column - stored as raw string)
      const ffNameColumn = state.buffer['attr_ffName_values'];
      if (ffNameColumn && Array.isArray(ffNameColumn)) {
        ffNameColumn[idx] = flagName;
      }

      // Write flag value (category column - stored as raw string)
      const ffValueColumn = state.buffer['attr_ffValue_values'];
      if (ffValueColumn && Array.isArray(ffValueColumn)) {
        const strValue = value === null || value === undefined ? 'null' : String(value);
        ffValueColumn[idx] = strValue;
      }

      state.buffer.writeIndex++;
    }

    /**
     * Log flag usage to buffer or column writers
     */
    #logUsage(flagName, context) {
      const state = this.#state;

      // Support for FlagColumnWriters interface
      if (state.columnWriters) {
        state.columnWriters.writeEntryType('ff-usage');
        state.columnWriters.writeFfName(flagName);
        state.columnWriters.writeAction(context?.action);
        state.columnWriters.writeOutcome(context?.outcome);
        state.columnWriters.writeContextAttributes(state.evaluationContext);
        return;
      }

      if (!state.buffer) return;

      const idx = state.buffer.writeIndex;

      state.buffer.operations[idx] = ENTRY_TYPE_FF_USAGE;
      state.buffer.timestamps[idx] = getTimestampNanos();

      // Write flag name (category column - stored as raw string)
      const ffNameColumn = state.buffer['attr_ffName_values'];
      if (ffNameColumn && Array.isArray(ffNameColumn)) {
        ffNameColumn[idx] = flagName;
      }

      if (context?.action) {
        const actionColumn = state.buffer['attr_action_values'];
        if (actionColumn && Array.isArray(actionColumn)) {
          actionColumn[idx] = context.action;
          const nullBitmap = state.buffer.attr_action_nulls;
          if (nullBitmap) {
            const byteIndex = Math.floor(idx / 8);
            const bitOffset = idx % 8;
            nullBitmap[byteIndex] |= 1 << bitOffset;
          }
        }
      }

      if (context?.outcome) {
        const outcomeColumn = state.buffer['attr_outcome_values'];
        if (outcomeColumn && Array.isArray(outcomeColumn)) {
          outcomeColumn[idx] = context.outcome;
          const nullBitmap = state.buffer.attr_outcome_nulls;
          if (nullBitmap) {
            const byteIndex = Math.floor(idx / 8);
            const bitOffset = idx % 8;
            nullBitmap[byteIndex] |= 1 << bitOffset;
          }
        }
      }

      state.buffer.writeIndex++;
    }

    /**
     * Get async flag value
     * Returns undefined when false, FlagContext when truthy
     */
    async get(flag) {
      const state = this.#state;
      const cacheKey = 'async_' + flag;

      if (state.flagCache.has(cacheKey)) {
        return state.flagCache.get(cacheKey);
      }

      const definition = state.schema[flag];
      const rawValue = await state.evaluator.getAsync(flag, state.evaluationContext);
      const value = validateFlagValue(rawValue, definition.schema, definition.defaultValue);

      if (!state.accessedFlags.has(flag)) {
        this.#logAccess(flag, rawValue);
        state.accessedFlags.add(flag);
      }

      if (!value) {
        state.flagCache.set(cacheKey, undefined);
        return undefined;
      }

      const wrapped = this.#wrapValue(flag, value);
      state.flagCache.set(cacheKey, wrapped);
      return wrapped;
    }

    /**
     * Track flag usage. Prefer using flag.track() for the fluent API.
     */
    trackUsage(flag, context) {
      this.#logUsage(flag, context);
    }

    /**
     * Create child evaluator with additional context
     */
    forContext(additional) {
      const state = this.#state;
      return new CustomFeatureFlagEvaluator({
        ...state,
        evaluationContext: { ...state.evaluationContext, ...additional },
        accessedFlags: new Set(),
        flagCache: new Map(),
      });
    }

    /**
     * Create evaluator bound to a different buffer
     */
    withBuffer(buffer) {
      const state = this.#state;
      return new CustomFeatureFlagEvaluator({
        ...state,
        buffer,
        accessedFlags: new Set(),
        flagCache: new Map(),
      });
    }

    /**
     * Get current evaluation context
     */
    getContext() {
      return this.#state.evaluationContext;
    }

    // Generated getters for each flag
    
    get testFlag() {
      return this.#getFlag('testFlag');
    }
  }

  return CustomFeatureFlagEvaluator;
})
"
`;

exports[`generateEvaluatorClass snapshots snapshot: many flags 1`] = `
"
(function(validateFlagValue, getTimestampNanos, ENTRY_TYPE_FF_ACCESS, ENTRY_TYPE_FF_USAGE) {
  'use strict';

  class GeneratedEvaluator {
    #state;

    constructor(state) {
      this.#state = state;
    }

    // Expose internal state as getters for introspection
    get schema() { return this.#state.schema; }
    get evaluationContext() { return this.#state.evaluationContext; }
    get evaluator() { return this.#state.evaluator; }
    get buffer() { return this.#state.buffer; }
    get columnWriters() { return this.#state.columnWriters; }
    set columnWriters(value) { this.#state.columnWriters = value; }
    set buffer(value) { this.#state.buffer = value; }

    /**
     * Get a flag value synchronously with caching and logging
     * Returns undefined for falsy values, FlagContext wrapper for truthy values
     */
    #getFlag(flagName) {
      const state = this.#state;

      // Check cache first (deduplication - subsequent access in same span)
      if (state.flagCache.has(flagName)) {
        return state.flagCache.get(flagName);
      }

      const definition = state.schema[flagName];

      // Evaluate flag
      const rawValue = state.evaluator.getSync(flagName, state.evaluationContext);
      const value = validateFlagValue(rawValue, definition.schema, definition.defaultValue);

      // Log access (only on first access in this span)
      if (!state.accessedFlags.has(flagName)) {
        this.#logAccess(flagName, rawValue);
        state.accessedFlags.add(flagName);
      }

      // Return undefined for falsy values (false, 0, "", null, undefined)
      if (!value) {
        state.flagCache.set(flagName, undefined);
        return undefined;
      }

      // Wrap truthy values with track() method
      const wrapped = this.#wrapValue(flagName, value);
      state.flagCache.set(flagName, wrapped);
      return wrapped;
    }

    /**
     * Wrap a truthy flag value with a track() method
     */
    #wrapValue(flagName, value) {
      const self = this;

      if (typeof value === 'boolean') {
        return {
          value: true,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      if (typeof value === 'string') {
        return {
          value,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      if (typeof value === 'object' && value !== null) {
        return {
          ...value,
          track(context) {
            self.#logUsage(flagName, context);
          }
        };
      }

      return {
        value,
        track(context) {
          self.#logUsage(flagName, context);
        }
      };
    }

    /**
     * Log flag access to buffer or column writers
     */
    #logAccess(flagName, value) {
      const state = this.#state;

      // Support for FlagColumnWriters interface
      if (state.columnWriters) {
        state.columnWriters.writeEntryType('ff-access');
        state.columnWriters.writeFfName(flagName);
        state.columnWriters.writeFfValue(value);
        state.columnWriters.writeContextAttributes(state.evaluationContext);
        return;
      }

      // New SpanBuffer API
      if (!state.buffer) return;

      const idx = state.buffer.writeIndex;

      state.buffer.operations[idx] = ENTRY_TYPE_FF_ACCESS;
      state.buffer.timestamps[idx] = getTimestampNanos();

      // Write flag name (category column - stored as raw string)
      const ffNameColumn = state.buffer['attr_ffName_values'];
      if (ffNameColumn && Array.isArray(ffNameColumn)) {
        ffNameColumn[idx] = flagName;
      }

      // Write flag value (category column - stored as raw string)
      const ffValueColumn = state.buffer['attr_ffValue_values'];
      if (ffValueColumn && Array.isArray(ffValueColumn)) {
        const strValue = value === null || value === undefined ? 'null' : String(value);
        ffValueColumn[idx] = strValue;
      }

      state.buffer.writeIndex++;
    }

    /**
     * Log flag usage to buffer or column writers
     */
    #logUsage(flagName, context) {
      const state = this.#state;

      // Support for FlagColumnWriters interface
      if (state.columnWriters) {
        state.columnWriters.writeEntryType('ff-usage');
        state.columnWriters.writeFfName(flagName);
        state.columnWriters.writeAction(context?.action);
        state.columnWriters.writeOutcome(context?.outcome);
        state.columnWriters.writeContextAttributes(state.evaluationContext);
        return;
      }

      if (!state.buffer) return;

      const idx = state.buffer.writeIndex;

      state.buffer.operations[idx] = ENTRY_TYPE_FF_USAGE;
      state.buffer.timestamps[idx] = getTimestampNanos();

      // Write flag name (category column - stored as raw string)
      const ffNameColumn = state.buffer['attr_ffName_values'];
      if (ffNameColumn && Array.isArray(ffNameColumn)) {
        ffNameColumn[idx] = flagName;
      }

      if (context?.action) {
        const actionColumn = state.buffer['attr_action_values'];
        if (actionColumn && Array.isArray(actionColumn)) {
          actionColumn[idx] = context.action;
          const nullBitmap = state.buffer.attr_action_nulls;
          if (nullBitmap) {
            const byteIndex = Math.floor(idx / 8);
            const bitOffset = idx % 8;
            nullBitmap[byteIndex] |= 1 << bitOffset;
          }
        }
      }

      if (context?.outcome) {
        const outcomeColumn = state.buffer['attr_outcome_values'];
        if (outcomeColumn && Array.isArray(outcomeColumn)) {
          outcomeColumn[idx] = context.outcome;
          const nullBitmap = state.buffer.attr_outcome_nulls;
          if (nullBitmap) {
            const byteIndex = Math.floor(idx / 8);
            const bitOffset = idx % 8;
            nullBitmap[byteIndex] |= 1 << bitOffset;
          }
        }
      }

      state.buffer.writeIndex++;
    }

    /**
     * Get async flag value
     * Returns undefined when false, FlagContext when truthy
     */
    async get(flag) {
      const state = this.#state;
      const cacheKey = 'async_' + flag;

      if (state.flagCache.has(cacheKey)) {
        return state.flagCache.get(cacheKey);
      }

      const definition = state.schema[flag];
      const rawValue = await state.evaluator.getAsync(flag, state.evaluationContext);
      const value = validateFlagValue(rawValue, definition.schema, definition.defaultValue);

      if (!state.accessedFlags.has(flag)) {
        this.#logAccess(flag, rawValue);
        state.accessedFlags.add(flag);
      }

      if (!value) {
        state.flagCache.set(cacheKey, undefined);
        return undefined;
      }

      const wrapped = this.#wrapValue(flag, value);
      state.flagCache.set(cacheKey, wrapped);
      return wrapped;
    }

    /**
     * Track flag usage. Prefer using flag.track() for the fluent API.
     */
    trackUsage(flag, context) {
      this.#logUsage(flag, context);
    }

    /**
     * Create child evaluator with additional context
     */
    forContext(additional) {
      const state = this.#state;
      return new GeneratedEvaluator({
        ...state,
        evaluationContext: { ...state.evaluationContext, ...additional },
        accessedFlags: new Set(),
        flagCache: new Map(),
      });
    }

    /**
     * Create evaluator bound to a different buffer
     */
    withBuffer(buffer) {
      const state = this.#state;
      return new GeneratedEvaluator({
        ...state,
        buffer,
        accessedFlags: new Set(),
        flagCache: new Map(),
      });
    }

    /**
     * Get current evaluation context
     */
    getContext() {
      return this.#state.evaluationContext;
    }

    // Generated getters for each flag
    
    get flag1() {
      return this.#getFlag('flag1');
    }

    get flag2() {
      return this.#getFlag('flag2');
    }

    get flag3() {
      return this.#getFlag('flag3');
    }

    get flag4() {
      return this.#getFlag('flag4');
    }

    get flag5() {
      return this.#getFlag('flag5');
    }
  }

  return GeneratedEvaluator;
})
"
`;
